[metadata]
author = brianddk
author_email = brianddk@users.noreply.github.com
license = Apache-2.0
license_files = LICENSE
url = https://github.com/brianddk/pyexch
project_urls =
    Homepage = https://github.com/brianddk/pyexch
    Repository = https://github.com/brianddk/pyexch.git
    Issues = https://github.com/brianddk/pyexch/issues
    Discussions = https://github.com/brianddk/pyexch/discussions
    Donations = https://tippin.me/@dkbriand

[flake8]
max-line-length = 200
filename =
    ./examples/*.py,
    ./pyexch/*.py,
    ./tests/*.py,
ignore =
    # E501: line too long
    E501,
    # W503 line break before binary operator    
    W503,
    # E203 whitespace before ':'    
    E203,

# Run with `isort .`
#
[isort]
py_version = 38
profile = black
src_paths = pyexch, examples, tests
